--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
   width: 25px;
   position: absolute;
   border-radius: 10px;
+  background-color: rgba(255, 255, 255, 10);
 }
 
 .tile .action.doable:hover {
