--- a/index.css
+++ b/index.css
@@ -230,21 +230,29 @@
 }
 .room-4 {
   top: 45%;
-  left: 32%;
+  left: 5%;
 }
 .room-5 {
-  top: 62%;
+  top: 45%;
   left: 32%;
 }
 .room-6 {
-  top: 80%;
+  top: 62%;
   left: 5%;
 }
 .room-7 {
-  top: 80%;
+  top: 62%;
   left: 32%;
 }
 .room-8 {
+  top: 80%;
+  left: 5%;
+}
+.room-9 {
+  top: 80%;
+  left: 32%;
+}
+.room-10 {
   top: 80%;
   left: 60%;
 }
